<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="rn97.first.Dashboard"
    android:background="#e8f4f8">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:padding="10dp"
        android:layout_alignParentEnd="true"
        android:orientation="vertical"
        android:background="#d4ebf2">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:id="@+id/question"
            android:background="#add8e6"
            android:padding="12dp"
            android:textAlignment="center"
            android:textSize="16sp"
            android:text="@string/sampleQues"/>
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:padding="20dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/option1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option1"/>
            <RadioButton
                android:id="@+id/option2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option2"/>
            <RadioButton
                android:id="@+id/option3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option3"/>
            <RadioButton
                android:id="@+id/option4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option4"/>
        </RadioGroup>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Next"
            android:id="@+id/nextButton"
            android:onClick="NextButton"
            android:layout_gravity="right"
            android:backgroundTint="#d4ebf2" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/query"
        android:text="Are you offline?"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="To Api"
        android:id="@+id/button"
        android:onClick="toapi"
        android:backgroundTint="#c2e5f0"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
